--- a/requirements.yml
+++ b/requirements.yml
@@ -6,4 +6,4 @@ collections:
   - name: kubernetes.core
   - name: community.okd
   - name: community.general
-  - name: git+https://github.com/validatedpatterns/rhvp.cluster_utils.git,v1
+  - name: git+https://github.com/mlorenzofr/rhvp.cluster_utils.git,mbp-931
